# photo_compresser

./: .pre-commit-config.yaml  AGENTS.md  README.md  cache_config.toml  image_comparison.py  image_comparison_viewer.py  image_compression.py  main.py  pyproject.toml  requirements.txt  save_functions.py
resources/: resources.qrc
scripts/: build_mac.sh  build_macos_dmg.bat  build_macos_dmg.sh  build_ubuntu.bat  build_ubuntu.sh  build_windows.bat  build_windows.sh
service/: cache_config.py  collapsible_box.py  compression_profiles.py  constants.py  file_utils.py  image_comparison.py  image_comparison_viewer.py  image_compression.py  image_pair.py  main.py  parameters_defaults.py  profile_panel.py  resources_rc.py  save_functions.py  translator.py  video_compression.py  video_encoding.py  video_profile_panel.py  viewer_config.json
tests/: test_copy_unsupported.py  test_failed_file_copied.py  test_failed_file_logging.py  test_output_directory.py  test_parallel_processing.py  test_profile_application.py  test_profile_in_settings.py  test_profile_management.py  test_profile_panel_visibility.py  test_profile_tooltip.py  test_profiles.py  test_profiles_two_dirs.py  test_raw_profile_name.py  test_thumbnail_display.py  test_thumbnail_runnable.py  test_video_collection.py  test_video_profile_management.py
