[project]
name = "photoviewer-cursor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "pillow-avif-plugin>=1.5.2",
    "pillow-heif>=1.1.0",
    "pyqt6>=6.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
]
